chore: fix gap main_container

--- a/app/routes/home.module.css
+++ b/app/routes/home.module.css
@@ -19,6 +19,7 @@
 @media screen and (min-width: 736px) {
   .main_container {
     padding: 1.5rem 2rem 4rem 2rem;
+    gap: 4rem;
   }
 
   .main_content {
